--- a/_pgbackup/index_1620101116.html
+++ b/_pgbackup/index_1620101116.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en"> 
 <head>   
-  <meta charset="UTF-8">
-  <meta name="description" content="Resume">
-  <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="Chantelle">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<body>
-   
-            <tr>
+    <!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+    <table border="2">
+
+        <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
         <tr>
@@ -52,9 +49,14 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-        </tr>
-    </body>
-    </head>
-	</html>
-   
-        
+        </tr></table>
+    </html>
+        </head>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
