--- a/_pgbackup/index_1620101956.html
+++ b/_pgbackup/index_1620101956.html
@@ -6,10 +6,9 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-</html>
-<table border="2">
-        <tr>
+  	<body>
+   
+            <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
         <tr>
@@ -53,11 +52,9 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
-
-
-    
-
-
+        </tr>
+    </body>
+    </head>
+	</html>
    
+        
