--- a/_pgbackup/index_1620102097.html
+++ b/_pgbackup/index_1620102097.html
@@ -6,9 +6,12 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-</html>
-<table border="2">
+    <!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+    <table border="2">
+
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -53,11 +56,14 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
+        </tr></table>
+    </html>
+        </head>
 
 
-    
-
-
-   
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
