--- a/_pgbackup/index_1620102403.html
+++ b/_pgbackup/index_1620102403.html
@@ -7,8 +7,9 @@
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-</html>
-<table border="2">
+    <!DOCTYPE html>
+    <table border="2">
+
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -53,11 +54,14 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
+        </tr></table>
+    </html>
+        
 
 
-    
-
-
-   
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
