--- a/_pgbackup/index_1620169642.html
+++ b/_pgbackup/index_1620169642.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-    <table border="2">
+<html lang="en"> 
+<head>
+    <body>
+  <meta charset="UTF-8">
+  <meta name="description" content="Resume">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Chantelle">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Table Example</title>
+    </body>
+    </head>
+	</html>
+<table border="2">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -15,55 +23,45 @@
         <tr>
             <th>Week starting</th>
             <th>2/15/2018</th>
-            <th>Instructions</th>
+            <th colspan="8">Instructions</th>
         </tr>
         <tr>
             <td><b>Day of the Week</b></td>
             <td><b>Recipe Name</b></td>
-            <td></td>
         </tr>
         <tr>
             <td>Monday</td>
             <td>Spinach Feta Pizza</td>
-            <td>Pizza Instructions</td>
-        </tr>
+            </tr>
         <tr>
             <td>Tuesday</td>
             <td>My New Recipe</td>
-            <td>New Recipe Instructions</td>
         </tr>
         <tr>
         <td>Wednesday</td>
             <td>Recipe Three</td>
-            <td>Recipe Three Instructions</td>
         </tr>
         <tr>
             <td>Thursday</td>
             <td>Recipe Four</td>
-            <td>Recipe Four Instructions</td>
         </tr>
         <tr>
             <td>Friday</td>
             <td>Recipe Five</td>
-            <td>Recipe Five Instructions</td>
         </tr>
         <tr>
             <td>Saturday</td>
             <td>Recipe Six</td>
-            <td>Recipe Six Instructions</td>
         </tr>
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-            <td>Recipe Seven Instructions</td>
-        </tr></table>
-    </head>
-</html>
+    </tr>
+    </table>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    
+
+
+   
