--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>HTML Table Example</title>
     </head>
 	</html>
-    <table border="2"/>
+    <table border="2">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -54,7 +54,7 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
+        </tr></table>
 
 
 
