--- a/_pgbackup/index_1620176276.html
+++ b/_pgbackup/index_1620176276.html
@@ -1,10 +1,15 @@
-<head>   
-    <!DOCTYPE html>
-<html lang="en">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+<!DOCTYPE html>
+<html lang="en"> 
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Resume">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Chantelle">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Table Example</title>
+    </head>
+	</html>
     <table border="2">
-
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -50,13 +55,10 @@
             <td>Sunday</td>
             <td>Recipe Seven</td>
         </tr></table>
-    </html>
-        </head>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    
+
+
+   
