--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>HTML Table Example</title>
     </head>
 	</html>
+<body>
     <table border="2">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
@@ -55,10 +56,4 @@
             <td>Sunday</td>
             <td>Recipe Seven</td>
         </tr></table>
-
-
-
-    
-
-
-   
+</body>
