--- a/_pgbackup/index_1620179303.html
+++ b/_pgbackup/index_1620179303.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<body>
-   
-            <tr>
+    <title>HTML Table Example</title>
+    </head>
+<body>
+    <table cellspacing="" cellpadding="" border="1" bgcolor="#FBFCFC">
+        <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
         <tr>
@@ -52,9 +54,13 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-        </tr>
-    </body>
-    </head>
-	</html>
+        </tr></table>
+</body>
+</html>
+
+
+
+    
+
+
    
-        
