--- a/_pgbackup/index_1620178948.html
+++ b/_pgbackup/index_1620178948.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
   <meta name="description" content="Resume">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Table Example</title>
+    </head>
+<body>
     <table border="2">
-
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -52,16 +54,13 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
-</head>
-    </html>
+        </tr></table>
+</body>
+</html>
+
+
+
     
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+   
