--- a/_pgbackup/index_1620179482.html
+++ b/_pgbackup/index_1620179482.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!DOCTYPE html>
-<html lang="en">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-    <table border="2">
-
+    <title>HTML Table Example</title>
+    </head>
+<body>
+    <table cellspacing="" cellpadding="" border="1" bgcolor="#FBFCFC">
         <tr>
-            <th colspan="3"><h1>HTML Table Example</h1></th>
+            <h1><center><th colspan="3">HTML Table Example</th></center></h1>
         </tr>
         <tr>
             <td><img src="https://i.pinimg.com/564x/dd/e8/77/dde877bf360d05bdb749f24dcc0a13ac.jpg" alt="Basic Kitchen Decor" width="250" height="150"></td>
@@ -57,13 +55,12 @@
             <td>Sunday</td>
             <td>Recipe Seven</td>
         </tr></table>
-    </html>
-        </head>
+</body>
+</html>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    
+
+
+   
