--- a/_pgbackup/index_1620180391.html
+++ b/_pgbackup/index_1620180391.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Table Example</title>
     </head>
-</html>
-<table border="2">
+<body>
+    <table cellspacing="" cellpadding="" border="1" bgcolor="#FBFCFC">
         <tr>
-            <th colspan="3"><h1>HTML Table Example</h1></th>
+            <h1><th colspan="3">HTML Table Example</th></h1>
         </tr>
         <tr>
             <td><img src="https://i.pinimg.com/564x/dd/e8/77/dde877bf360d05bdb749f24dcc0a13ac.jpg" alt="Basic Kitchen Decor" width="250" height="150"></td>
@@ -53,8 +54,10 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
+        </tr></table>
+</body>
+</html>
+
 
 
     
