--- a/_pgbackup/index_1620180765.html
+++ b/_pgbackup/index_1620180765.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Table Example</title>
     </head>
-    <!DOCTYPE html>
-    <table border="2">
-
+<body>
+    <table cellspacing="" cellpadding="" border="1" bgcolor="#FBFCFC">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -55,13 +55,12 @@
             <td>Sunday</td>
             <td>Recipe Seven</td>
         </tr></table>
-    </html>
-        
+</body>
+</html>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    
+
+
+   
