--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en"> 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table Example</title>
     </head>
 <body>
-    <table border="2">
+    <table cellspacing="" cellpadding="0" border="1" bgcolor="#FBFCFC">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
