--- a/_pgbackup/index_1620181072.html
+++ b/_pgbackup/index_1620181072.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>   
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table Example</title>
     </head>
-</html>
-<table border="2">
+<body>
+    <table cellspacing="" cellpadding="0" border="1" bgcolor="#FBFCFC">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -54,8 +54,10 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
+        </tr></table>
+</body>
+</html>
+
 
 
     
