--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>HTML Table Example</title>
     </head>
 <body>
-    <table cellspacing="" cellpadding="0" border="1" bgcolor="#FBFCFC">
+    <table border="2">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
