--- a/_pgbackup/index_1620184359.html
+++ b/_pgbackup/index_1620184359.html
@@ -2,14 +2,14 @@
 <html lang="en"> 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table Example</title>
     </head>
-	</html>
-<table border="2">
+<body>
+    <table border="2">
         <tr>
             <th colspan="3"><h1>HTML Table Example</h1></th>
         </tr>
@@ -21,7 +21,7 @@
         <tr>
             <th>Week starting</th>
             <th>2/15/2018</th>
-            <th colspan="8">Instructions</th>
+            <th colspan="3">Instructions</th>
         </tr>
         <tr>
             <td><b>Day of the Week</b></td>
@@ -54,8 +54,9 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-    </tr>
-    </table>
+        </tr></table>
+</body>
+</html>
 
 
 
