--- a/_pgbackup/index_1620272944.html
+++ b/_pgbackup/index_1620272944.html
@@ -2,16 +2,15 @@
 <html lang="en"> 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Resume">
+  <meta name="description" content="Table">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table Example</title>
-    </head>
-<body>
-    <table border="2">
-        <tr>
-            <th colspan="3"><h1>HTML Table Example</h1></th>
+    <link href="style.css" rel="stylesheet" type="text/css"></head></html>
+<table>     
+    <tr>
+            <th colspan="3"><p>HTML Table Example</p></th>
         </tr>
         <tr>
             <td><img src="https://i.pinimg.com/564x/dd/e8/77/dde877bf360d05bdb749f24dcc0a13ac.jpg" alt="Basic Kitchen Decor" width="250" height="150"></td>
@@ -21,7 +20,7 @@
         <tr>
             <th>Week starting</th>
             <th>2/15/2018</th>
-            <th colspan="8">Instructions</th>
+            <th colspan="1">Instructions</th>
         </tr>
         <tr>
             <td><b>Day of the Week</b></td>
@@ -54,9 +53,9 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-        </tr></table>
-</body>
-</html>
+        </tr>
+    </table>
+
 
 
 
