--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Table Example</title>
-    </head>
-<body>
-     <table border="2">
-        <tr>
-            
-            <th colspan="3"><h1>HTML Table Example</h1></th>
+    <link href="style.css" rel="stylesheet" type="text/css"></head></html>
+<table>     
+    <tr>
+            <th colspan="3"><p>HTML Table Example</p></th>
         </tr>
         <tr>
             <td><img src="https://i.pinimg.com/564x/dd/e8/77/dde877bf360d05bdb749f24dcc0a13ac.jpg" alt="Basic Kitchen Decor" width="250" height="150"></td>
@@ -55,9 +53,9 @@
         <tr>
             <td>Sunday</td>
             <td>Recipe Seven</td>
-        </tr></table>
-</body>
-</html>
+        </tr>
+    </table>
+
 
 
 
