--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Chantelle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <title>HTML Table Example</title>
-    <link href="style.css" rel="stylesheet" type="text/css"></head></html>
-<table>     
-    <tr>
+    <link href="style.css" rel="stylesheet" type="text/css"></head>
+    <body>
+    <table>
+<tr>
             <th colspan="3"><p>HTML Table Example</p></th>
         </tr>
         <tr>
@@ -55,8 +57,8 @@
             <td>Recipe Seven</td>
         </tr>
     </table>
-
-
+</body>
+</html>
 
 
     
