--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <tr>
             <th>Week starting</th>
             <th>2/15/2018</th>
-            <th colspan="1">Instructions</th>
+            <th rowspan="1">Instructions</th>
         </tr>
         <tr>
             <td><b>Day of the Week</b></td>
             <td><b>Recipe Name</b></td>
+            <td rowspan="8"></td>
         </tr>
         <tr>
             <td>Monday</td>
